fix: :lipstick: Text-align correction
KAN-127

--- a/src/pages/Landing/sections/footer/Footer.css
+++ b/src/pages/Landing/sections/footer/Footer.css
@@ -49,7 +49,7 @@
 }
 
 .footer__input{
-    text-align: center;
+    text-align: left;
     width: 100%;
     height: 48px;
     border: none;
